# dbt-core

./: pyproject.toml
northwind/: dbt_project.yml
