[tool.poetry]
name = "dbt-core-northwind-project"
version = "0.1.0"
description = ""
authors = ["Hemerson Douglas <douglas_godinho@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
dbt-postgres = "^1.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
